[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/time.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/snake_fit_hover.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/snake_fit_select.jpg" type="Texture" id=3]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/snake_fit.jpg" type="Texture" id=4]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/wasp_fit_hover.jpg" type="Texture" id=5]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/wasp_fit.jpg" type="Texture" id=6]
[ext_resource path="res://assets/Easy Animated Enemy Pack - Jan 2019/TextureRect/wasp_fit_select.jpg" type="Texture" id=7]
[ext_resource path="res://scripts/select_character.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="select_character" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 1024.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "Choose your animal"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 1024.0
margin_bottom = 465.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="snake_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 282.0
margin_bottom = 300.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="wasp_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 502.0
margin_bottom = 300.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )

[node name="frog_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 522.0
margin_right = 722.0
margin_bottom = 300.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="rat_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 742.0
margin_right = 942.0
margin_bottom = 300.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
